; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/widgets/extr_menu_widgets.c_menu_widgets_get_badge_texture.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/widgets/extr_menu_widgets.c_menu_widgets_get_badge_texture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PATH_MAX_LENGTH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c".png\00", align 1
@APPLICATION_SPECIAL_DIRECTORY_THUMBNAILS_CHEEVOS_BADGES = common dso_local global i32 0, align 4
@TEXTURE_FILTER_MIPMAP_LINEAR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i8*)* @menu_widgets_get_badge_texture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @menu_widgets_get_badge_texture(i64* %0, i8* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [16 x i8], align 16
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i64* %0, i64** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i32, i32* @PATH_MAX_LENGTH, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %6, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %7, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %2
  %16 = load i64*, i64** %3, align 8
  store i64 0, i64* %16, align 8
  store i32 1, i32* %8, align 4
  br label %33

17:                                               ; preds = %2
  %18 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @strlcpy(i8* %18, i8* %19, i32 16)
  %21 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %22 = call i32 @strlcat(i8* %21, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 16)
  %23 = load i32, i32* @PATH_MAX_LENGTH, align 4
  %24 = sext i32 %23 to i64
  %25 = mul i64 %24, 1
  %26 = trunc i64 %25 to i32
  %27 = load i32, i32* @APPLICATION_SPECIAL_DIRECTORY_THUMBNAILS_CHEEVOS_BADGES, align 4
  %28 = call i32 @fill_pathname_application_special(i8* %12, i32 %26, i32 %27)
  %29 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %30 = load i64*, i64** %3, align 8
  %31 = load i32, i32* @TEXTURE_FILTER_MIPMAP_LINEAR, align 4
  %32 = call i32 @menu_display_reset_textures_list(i8* %29, i8* %12, i64* %30, i32 %31, i32* null, i32* null)
  store i32 0, i32* %8, align 4
  br label %33

33:                                               ; preds = %17, %15
  %34 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %34)
  %35 = load i32, i32* %8, align 4
  switch i32 %35, label %37 [
    i32 0, label %36
    i32 1, label %36
  ]

36:                                               ; preds = %33, %33
  ret void

37:                                               ; preds = %33
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @strlcpy(i8*, i8*, i32) #2

declare dso_local i32 @strlcat(i8*, i8*, i32) #2

declare dso_local i32 @fill_pathname_application_special(i8*, i32, i32) #2

declare dso_local i32 @menu_display_reset_textures_list(i8*, i8*, i64*, i32, i32*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
